# ai-creator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
assets/: README.md
data/: README.md  up_transcripts.json
docs/superpowers/plans/: 2026-06-01-ai-book-video-agent-plan.md
docs/superpowers/specs/: 2026-06-01-ai-book-video-agent-design.md
scripts/: README.md  clone_voice.py
src/: README.md  assemble.py  config.py  evaluate.py  intro.py  llm.py  orchestrator.py  pipeline.py  tts.py  videogen.py
src/content/: polisher.py  selector.py  templates.py
src/crawler/: base.py  douban.py  scheduler.py  weread.py
src/media/: client.py
src/review/: scorer.py
src/scheduler/: cron.py
src/video/: composer.py  effects.py  intro.py
tests/: test_client.py  test_pipeline.py
