[project]
name = "ai-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ffmpeg-python>=0.2.0",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "soundfile>=0.13.1",
]
