[project]
name = "ai-creator"
version = "0.2.0"
description = "AI 读书短视频生产管线 — LLM 写金句脚本 + HappyHorse 生成动态画面 + TTS 旁白 + FFmpeg 成片"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"